--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -19,4 +19,18 @@
 	note = {Accedido: 29/01/2019}
 }
 
+@misc{maven1,
+	title = {?`{{Q}}u{\'e} es Maven?},
+	author = {Cecilio {\'A}lvarez},
+	howpublished = {\url{https://www.genbeta.com/desarrollo/que-es-maven}},
+	note = {Accedido: 31/01/2019}
+}
+
+@misc{maven2,
+	title = {Maven},
+	author = {Wikipedia},
+	howpublished = {\url{https://es.wikipedia.org/wiki/Maven}},
+	note = {Accedido: 31/01/2019}
+}
+
 
