--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -40,7 +40,7 @@
 
 @book{itemsImportancia,
 	title={Evaluar para seguir adelante: Resultados del Programa Redes},
-	author={C. Cejas, M. Pen{\'e}, A. Macchia and D. Ferrante},
+	author={C. Cejas and M. Pen{\'e} and A. Macchia and D. Ferrante},
 	year={2016},
 	publisher={Cobertura Universal de Salud}
 }
