--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -33,4 +33,17 @@
 	note = {Accedido: 31/01/2019}
 }
 
+@misc{hibernate1,
+	title = {?`{{Q}}u{\'e} es Java Hibernate?},
+	author = {N. Guerrero},
+	howpublished = {\url{http://programaenlinea.net/que-es-java-hibernate/}},
+	note = {Accedido: 03/02/2019}
+}
+
+@book{hibernate2,
+	title={Hibernate - Persistencia relacional para Java idiom{\'a}tico},
+	author={ Gavin King and Christian Bauer and Max Rydahl Andersen and Emmanuel Bernard and Steve Ebersole and Hardy Ferentschik},
+	year={2016},
+	publisher={}
+}
 
